--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   </head>
   <body>
     <div id="userlist">
-      Hello world!, with HTML!
+      Hello world!, with HTML! ค่ะ
     </div>
+  </div>
+  Chat
+  </div>
     <!-- Exercise 02-1: Add two more divs for chat and inputbox -->
   </body>
 </html>
