--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div id="userlist" class="box" onclick="helloworld()">
       Hello World!, with HTML!
     </div>
+    </div>Chat box</div>
     <!-- Exercise 02-1: Add two more divs for chat and inputbox -->
   </body>
 </html>
